# collision-engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
include/: buffer_utils.h  circle.h  shader.h
shaders/: circle_fragment.glsl  circle_vertex.glsl  fragment.glsl  grid_fragment.glsl  grid_vertex.glsl  vertex.glsl
src/: buffer_utils.cpp  circle.cpp  main.cpp  shader.cpp  shader.h
